corrected twitter results margin. got rid of collapse animation bc it was weak

--- a/client/src/components/twitterResults/twitterResults.css
+++ b/client/src/components/twitterResults/twitterResults.css
@@ -36,15 +36,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
 .tweetDiv p{
     color: white;
  
@@ -64,11 +55,20 @@
     text-underline-position: under;
 }
 ul{
-    list-style-type: none;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: center;
+  padding-inline-start: 0%;
+  overflow: scroll;
+
+
 }
 
 .container{
-    overflow: auto;
+   
     transition: max-height .7s ease;
     display: flex;
     flex-direction: row;
